--- a/pkg/analyzer/internal/template/test-issue32.go.tmpl
+++ b/pkg/analyzer/internal/template/test-issue32.go.tmpl
@@ -18,20 +18,20 @@ const (
 
 func _() {
 {{- range $key, $value := .Mapping }}
-	_, _ = http.NewRequest("{{ lower $key }}", "", http.NoBody) // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
+	_, _ = http.NewRequest("{{ lower $key }}", "", http.NoBody) // want `"{{ quoteMeta (lower $key) }}" can be replaced by {{ quoteMeta $value }}`
 {{- end }}
 }
 
 func _() {
 {{- range $key, $value := .Mapping }}
-	_, _ = http.NewRequestWithContext(nil, "{{ lower $key }}", "", http.NoBody) // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
+	_, _ = http.NewRequestWithContext(nil, "{{ lower $key }}", "", http.NoBody) // want `"{{ quoteMeta (lower $key) }}" can be replaced by {{ quoteMeta $value }}`
 {{- end }}
 }
 
 func _() {
 {{- range $key, $value := .Mapping }}
 	_ = &http.Request{
-		Method: "{{ lower $key }}", // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
+		Method: "{{ lower $key }}", // want `"{{ quoteMeta (lower $key) }}" can be replaced by {{ quoteMeta $value }}`
 	}
 {{- end }}
 }
