feat: add check HTTP status code in IfStmt

--- a/pkg/analyzer/internal/template/test-httpstatuscode.go.tmpl
+++ b/pkg/analyzer/internal/template/test-httpstatuscode.go.tmpl
@@ -43,3 +43,17 @@ func _() error {
     return nil
 }
 {{ end -}}
+
+{{ range $key, $value := .Mapping }}
+func _() error {
+    resp, err := http.DefaultClient.Do(&http.Request{})
+    if err != nil {
+        return err
+    }
+    defer func() { _ = resp.Body.Close() }()
+    if resp.StatusCode == {{ $value }} {
+        return nil
+    }
+    return nil
+}
+{{ end -}}
