feat: add check HTTP method in ifstmt

--- a/pkg/analyzer/internal/template/test-httpmethod.go.tmpl
+++ b/pkg/analyzer/internal/template/test-httpmethod.go.tmpl
@@ -35,3 +35,31 @@ func _() {
 	}
 {{- end }}
 }
+
+{{ range $key, $value := .Mapping }}
+func _() error {
+    resp, err := http.DefaultClient.Do(&http.Request{})
+    if err != nil {
+        return err
+    }
+    defer func() { _ = resp.Body.Close() }()
+    if resp.Request.Method == "{{ $key }}" { // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
+        return nil
+    }
+    return nil
+}
+{{ end -}}
+
+{{ range $key, $value := .Mapping }}
+func _() error {
+    resp, err := http.DefaultClient.Do(&http.Request{})
+    if err != nil {
+        return err
+    }
+    defer func() { _ = resp.Body.Close() }()
+    if resp.Request.Method == {{ $value }} {
+        return nil
+    }
+    return nil
+}
+{{ end -}}
