--- a/pkg/analyzer/internal/template/test-issue32.go.tmpl
+++ b/pkg/analyzer/internal/template/test-issue32.go.tmpl
@@ -16,22 +16,20 @@ const (
 {{- end }}
 )
 
-func _() {
+var (
 {{- range $key, $value := .Mapping }}
 	_, _ = http.NewRequest("{{ toLower $key }}", "", http.NoBody) // want `"{{ quoteMeta (toLower $key) }}" can be replaced by {{ quoteMeta $value }}`
 {{- end }}
-}
+)
 
-func _() {
+var (
 {{- range $key, $value := .Mapping }}
 	_, _ = http.NewRequestWithContext(nil, "{{ toLower $key }}", "", http.NoBody) // want `"{{ quoteMeta (toLower $key) }}" can be replaced by {{ quoteMeta $value }}`
 {{- end }}
-}
+)
 
-func _() {
+var (
 {{- range $key, $value := .Mapping }}
-	_ = &http.Request{
-		Method: "{{ toLower $key }}", // want `"{{ quoteMeta (toLower $key) }}" can be replaced by {{ quoteMeta $value }}`
-	}
+	_ = &http.Request{Method: "{{ toLower $key }}" } // want `"{{ quoteMeta (toLower $key) }}" can be replaced by {{ quoteMeta $value }}`
 {{- end }}
-}
+)
