--- a/pkg/analyzer/internal/template/test-httpmethod.go.tmpl
+++ b/pkg/analyzer/internal/template/test-httpmethod.go.tmpl
@@ -19,96 +19,94 @@ const (
 {{- end }}
 )
 
-func _() {
+var (
 {{- range $key, $value := .Mapping }}
 	_, _ = http.NewRequest("{{ $key }}", "", http.NoBody) // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
 {{- end }}
-}
+)
 
-func _() {
+var (
 {{- range $key, $value := .Mapping }}
 	_, _ = http.NewRequestWithContext(nil, "{{ $key }}", "", http.NoBody) // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
 {{- end }}
-}
+)
 
-func _() {
+var (
 {{- range $key, $value := .Mapping }}
-	_ = &http.Request{
-		Method: "{{ $key }}", // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
-	}
+	_ = &http.Request{Method: "{{ $key }}"} // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
 {{- end }}
-}
+)
 
-{{ range $key, $value := .Mapping }}
 func _() error {
     resp, err := http.DefaultClient.Do(&http.Request{})
     if err != nil {
         return err
     }
     defer func() { _ = resp.Body.Close() }()
+{{- range $key, $value := .Mapping }}
     if resp.Request.Method == "{{ $key }}" { // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
         return nil
     }
+{{- end }}
     return nil
 }
-{{ end -}}
 
-{{ range $key, $value := .Mapping }}
 func _() error {
     resp, err := http.DefaultClient.Do(&http.Request{})
     if err != nil {
         return err
     }
     defer func() { _ = resp.Body.Close() }()
+{{- range $key, $value := .Mapping }}
     if resp.Request.Method == {{ $value }} {
         return nil
     }
+{{- end }}
     return nil
 }
-{{ end -}}
 
-{{ range $key, $value := .Mapping }}
 func _() {
     var r http.Request
     switch r.Method {
+{{- range $key, $value := .Mapping }}
     case "{{ $key }}": // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
       return
+{{- end }}
     }
 }
-{{ end -}}
 
-{{ range $key, $value := .Mapping }}
 func _() {
     var r http.Request
     switch r.Method {
+{{- range $key, $value := .Mapping }}
     case {{ $value }}:
       return
+{{- end }}
     }
 }
-{{ end -}}
 
-{{ range $key, $value := .Mapping }}
 func _() {
     var r http.Request
     switch {
+{{- range $key, $value := .Mapping }}
     case r.Method == "{{ $key }}": // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
       return
+{{- end }}
     }
 }
-{{ end -}}
 
-{{ range $key, $value := .Mapping }}
 func _() {
     var r http.Request
     switch {
+{{- range $key, $value := .Mapping }}
     case r.Method == {{ $value }}:
       return
+{{- end }}
     }
 }
-{{ end -}}
 
-func _() {
+var (
 {{- range $key, $value := .Mapping }}
 	_ = httptest.NewRequest("{{ $key }}", "", http.NoBody) // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
 {{- end }}
-}
+)
