Change format in http method test cases

--- a/pkg/analyzer/internal/template/test-httpmethod.go.tmpl
+++ b/pkg/analyzer/internal/template/test-httpmethod.go.tmpl
@@ -33,6 +33,12 @@ var (
 
 var (
 {{- range $key, $value := .Mapping }}
+	_ = http.Request{Method: "{{ $key }}"} // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
+{{- end }}
+)
+
+var (
+{{- range $key, $value := .Mapping }}
 	_ = &http.Request{Method: "{{ $key }}"} // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
 {{- end }}
 )
