--- a/pkg/analyzer/internal/template/test-issue32.go.tmpl
+++ b/pkg/analyzer/internal/template/test-issue32.go.tmpl
@@ -18,6 +18,18 @@ const (
 
 var (
 {{- range $key, $value := .Mapping }}
+	_ = http.Request{Method: "{{ toLower $key }}"} // want `"{{ quoteMeta (toLower $key) }}" can be replaced by {{ quoteMeta $value }}`
+{{- end }}
+)
+
+var (
+{{- range $key, $value := .Mapping }}
+	_ = &http.Request{Method: "{{ toLower $key }}"} // want `"{{ quoteMeta (toLower $key) }}" can be replaced by {{ quoteMeta $value }}`
+{{- end }}
+)
+
+var (
+{{- range $key, $value := .Mapping }}
 	_, _ = http.NewRequest("{{ toLower $key }}", "", http.NoBody) // want `"{{ quoteMeta (toLower $key) }}" can be replaced by {{ quoteMeta $value }}`
 {{- end }}
 )
@@ -25,11 +37,5 @@ var (
 var (
 {{- range $key, $value := .Mapping }}
 	_, _ = http.NewRequestWithContext(nil, "{{ toLower $key }}", "", http.NoBody) // want `"{{ quoteMeta (toLower $key) }}" can be replaced by {{ quoteMeta $value }}`
-{{- end }}
-)
-
-var (
-{{- range $key, $value := .Mapping }}
-	_ = &http.Request{Method: "{{ toLower $key }}"} // want `"{{ quoteMeta (toLower $key) }}" can be replaced by {{ quoteMeta $value }}`
 {{- end }}
 )
