--- a/pkg/analyzer/internal/template/test-httpmethod.go.tmpl
+++ b/pkg/analyzer/internal/template/test-httpmethod.go.tmpl
@@ -54,6 +54,11 @@ func _() error {
         return nil
     }
 {{- end }}
+{{- range $key, $value := .Mapping }}
+    for resp.Request.Method == "{{ $key }}" { // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
+        return nil
+    }
+{{- end }}
     return nil
 }
 
@@ -65,6 +70,11 @@ func _() error {
     defer func() { _ = resp.Body.Close() }()
 {{- range $key, $value := .Mapping }}
     if resp.Request.Method == {{ $value }} {
+        return nil
+    }
+{{- end }}
+{{- range $key, $value := .Mapping }}
+    for resp.Request.Method == {{ $value }} {
         return nil
     }
 {{- end }}
