--- a/pkg/analyzer/internal/template/test-httpstatus.go.tmpl
+++ b/pkg/analyzer/internal/template/test-httpstatus.go.tmpl
@@ -68,6 +68,8 @@ func _() error {
         return nil
     } else if resp.StatusCode == {{ $key }} { // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
         return nil
+    } else if false || resp.StatusCode == {{ $key }} { // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
+        return nil
     }
 {{- end }}
 {{- range $key, $value := .Mapping }}
