update httpstatus template for valid IfStmt uses too
Signed-off-by: Spencer Schrock <sschrock@google.com>

--- a/pkg/analyzer/internal/template/test-httpstatus.go.tmpl
+++ b/pkg/analyzer/internal/template/test-httpstatus.go.tmpl
@@ -91,6 +91,8 @@ func _() error {
         return nil
     } else if resp.StatusCode == {{ $value }} {
         return nil
+    } else if false || resp.StatusCode == {{ $value }} {
+        return nil
     }
 {{- end }}
 {{- range $key, $value := .Mapping }}
