fix: complex IfStmt false negatives (#94)
* Add nested BinaryExpr to httpstatus IfStmt tests

Signed-off-by: Spencer Schrock <sschrock@google.com>

* Check ast.BinaryExpr for HTTP Method and StatusCode

This represents a more general case of IfStmt, ForStmt and SwitchStmt

Signed-off-by: Spencer Schrock <sschrock@google.com>

* update httpstatus template for valid IfStmt uses too

Signed-off-by: Spencer Schrock <sschrock@google.com>

---------

Signed-off-by: Spencer Schrock <sschrock@google.com>

--- a/pkg/analyzer/internal/template/test-httpstatus.go.tmpl
+++ b/pkg/analyzer/internal/template/test-httpstatus.go.tmpl
@@ -68,6 +68,8 @@ func _() error {
         return nil
     } else if resp.StatusCode == {{ $key }} { // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
         return nil
+    } else if false || resp.StatusCode == {{ $key }} { // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
+        return nil
     }
 {{- end }}
 {{- range $key, $value := .Mapping }}
@@ -88,6 +90,8 @@ func _() error {
     if resp.StatusCode == {{ $value }} {
         return nil
     } else if resp.StatusCode == {{ $value }} {
+        return nil
+    } else if false || resp.StatusCode == {{ $value }} {
         return nil
     }
 {{- end }}
