--- a/pkg/analyzer/internal/template/test-issue103.go.golden.tmpl
+++ b/pkg/analyzer/internal/template/test-issue103.go.golden.tmpl
@@ -8,5 +8,10 @@ func _() {
 {{- range  $key, $value := .Mapping }}
     var _ = time.Date(2023, {{ $value }}, 2, 3, 4, 5, 0, time.UTC) // want `"{{ quoteMeta $key }}" can be replaced by {{ quoteMeta $value }}`
 {{- end }}
-    var _ = time.Date(2023, 13, 2, 3, 4, 5, 0, time.UTC)
+
+{{ range  $key, $value := .Mapping }}
+    var _ = time.Date(2023, {{ $value }}, 2, 3, 4, 5, 0, time.UTC)
+{{- end }}
 }
+
+var _ = time.Date(2023, 13, 2, 3, 4, 5, 0, time.UTC)
